# snake-solver

./: Cargo.toml  README.md  results.ipynb
examples/: auto.rs  benchmark.rs  complexity_bench.rs  manual.rs  manual2.rs  showcase.rs
src/: array2d.rs  coord.rs  lib.rs  main.rs  snake.rs  ui.rs
src/auto/: mod.rs  path.rs
src/snake/: array2d.rs  mod.rs
src/solvers/: basic.rs  mod.rs  random_spanning_tree.rs  snake_spanning_tree.rs  utils.rs
src/solvers/snake_spanning_tree/: coordinates.rs  mod.rs  pathfinding.rs  spanning_tree.rs
src/solvers/utils/: grid_graph.rs  mod.rs
src/utils/: array2d.rs  direction.rs  grid_graph.rs  mod.rs  path.rs
