[package]
name = "snake-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
maybe-owned = "0.3.4"
rand = "0.8.5"

[dev-dependencies]
indicatif = { version = "0.17.1", features = ["rayon"] }
rayon = "1.5.3"
dialoguer = "0.10.2"
